



########### install files ###############

install( FILES easy.kvtml animals.kvtml hard.kvtml medium.kvtml  DESTINATION  ${DATA_INSTALL_DIR}/khangman/data/en )




#original Makefile.am contents follow:

#txt_DATA = easy.kvtml animals.kvtml hard.kvtml medium.kvtml
#txtdir = $(kde_datadir)/khangman/data/en
#EXTRA_DIST = $(txt_DATA)
